# my-evidence-pocsite

./: .gitignore  Makefile  meltano.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: conso-elec-gaz-annuelle-par-secteur-dactivite-agregee-commune-file10.csv
evidence/: evidence.plugins.yaml  package-lock.json  package.json
evidence/.evidence/customization/: .profile.json
evidence/components/: CustomMapConfig.svelte  EChartsCustomMap.svelte  FranceMapModified.svelte  FrenchBreadCrumbs.svelte  FrenchContentsList.svelte  FrenchSidebar.svelte  FrenchTableOfContents.svelte  HeaderDGCS.svelte  HeaderPers.svelte  LogoDGCS.svelte  LogoPers.svelte
evidence/pages/: +layout.svelte  [departement].md  index.md
evidence/pages/Consommation énergétique/Bilan 2021/: index.md
evidence/pages/Production électrique renouvelable/Bilan 2022/: index.md
evidence/pages/energie/: index.md
evidence/pages/energie/par type /: index.md
evidence/pages/politique agricole commune/: index.md
evidence/pages/énergie/: index.md
evidence/queries/nrj/: analysis_conso_secteur.sql  carte_nrj_france.sql  classement_nrj_france.sql  decompo_departement.sql  tableau_nrj_france.sql
evidence/sources/mockdb/: connection.yaml
evidence/sources/my_mdsbox_pocsite/: connection.yaml  src_conso_elec_departement.sql  src_conso_gaz_departement.sql  src_conso_ttype_departement.sql  src_prod_elec_departement.sql
transform/: dbt_project.yml
transform/models/: sources.yml
transform/profiles/duckdb/: profiles.yml
(+11 files in other folders)
