[tool.poetry]
name = "testdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dbt-duckdb = "^1.7.0"
meltano = "^3.1.0"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
requests = "^2.31.0"
meltano-map-transform = {git = "https://github.com/MeltanoLabs/meltano-map-transform.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
